# crabler

./: Cargo.toml  LICENSE  Makefile  README.md  shell.nix
.github/workflows/: main.yml
crabler_derive/: Cargo.toml  LICENSE  Makefile  shell.nix
crabler_derive/src/: lib.rs
crabweb/: Cargo.toml
crabweb/src/: lib.rs
crabweb_derive/: Cargo.toml  Makefile
crabweb_derive/src/: lib.rs
src/: debug.rs  errors.rs  lib.rs  opts.rs
tests/: common.rs  integration_tests.rs  simple_roundtrip_tests.rs
