[package]
name = "crabler"
version = "0.1.14"
authors = ["Max Gonzih <gonzih@gmail.com>"]
edition = "2018"
description = "Web scraper for Crabs"
homepage = "https://github.com/Gonzih/crabler"
repository = "https://github.com/Gonzih/crabler"
documentation = "https://docs.rs/crabler"
readme = "README.md"
keywords = ["html", "css" , "scraper", "web"]
license = "MIT"
license-file = "LICENSE"

[dependencies]
crabquery = "0.1.7"
reqwest = { version = "0.10.10", features = [] }
async-std = { version = "1.8.0", features = ["unstable"] }
tokio = { version = "1.0.1", features = ["full"] }
futures = "0.3.8"
async-trait = "0.1.42"
thiserror = "1.0"
crabler_derive = "0.1.6"
# crabler_derive = { path = "./crabler_derive" }

[dev-dependencies]
