[package]
name = "crabler"
version = "0.1.23"
authors = ["Max Gonzih <gonzih@gmail.com>"]
edition = "2018"
description = "Web scraper for Crabs"
homepage = "https://github.com/Gonzih/crabler"
repository = "https://github.com/Gonzih/crabler"
documentation = "https://docs.rs/crabler"
readme = "README.md"
keywords = ["html", "css" , "scraper", "web"]
license = "MIT"
license-file = "LICENSE"

[features]
debug = []

[dependencies]
async-recursion = "0.3.2"
surf = "2.1.0"
async-std = { version = "1.8.0", features = ["unstable", "attributes"] }
futures = "0.3.8"
async-trait = "0.1.42"
thiserror = "1.0"
log = { version = "0.4.11", features = ["kv_unstable"] }
femme = "2.1.1"
crabler_derive = "0.1.7"
# crabler_derive = { path = "./crabler_derive" }
crabquery = "0.1.8"
# crabquery = { path = "/home/gnzh/mydev/crabquery" }

[dev-dependencies]
