[package]
name = "crabler_derive"
version = "0.1.0"
authors = ["Max Gonzih <gonzih@gmail.com>"]
edition = "2018"
description = "Derive macro for crabler library"
homepage = "https://github.com/Gonzih/crabler"
repository = "https://github.com/Gonzih/crabler"
documentation = "https://docs.rs/crabler_derive"
keywords = ["html", "css" , "scraper", "web"]
license = "MIT"
license-file = "LICENSE"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.15"
quote = "1.0"
proc-macro-error = "0.4.9"
proc-macro2 = "1.0"
