[package]
name = "crabweb"
version = "0.1.0"
authors = ["Max Gonzih <gonzih@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crabquery = "0.1.1"
reqwest = { version = "0.10", features = [] }
async-std = { version = "1.5.0", features = ["unstable"] }
tokio = { version = "0.2.11", features = ["full"] }
futures = "0.3.4"
